--- a/.github/workflows/netlify-cicd.yml
+++ b/.github/workflows/netlify-cicd.yml
@@ -20,32 +20,56 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run lint --if-present
-      - run: npm test --if-present -- --ci
-        env: { CI: true }
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Lint
+        run: npm run lint --if-present
+
+      - name: Test
+        run: npm test --if-present -- --ci
+        env:
+          CI: true
 
   deploy:
     needs: ci
     runs-on: ubuntu-latest
     if: ${{ always() && needs.ci.result == 'success' }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-        env: { NODE_ENV: production }
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+        env:
+          NODE_ENV: production
 
       - name: Install Netlify CLI
         run: npm i -g netlify-cli jq
 
+      # 👇 This links the CLI to your site using the secret SITE ID
+      - name: Link Netlify site
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: |
+          netlify link --id "$NETLIFY_SITE_ID"
+          netlify status
+
+      # ---- Preview deploy on PRs ----
       - name: Deploy (Preview for PRs)
         if: ${{ github.event_name == 'pull_request' }}
         id: preview
@@ -54,8 +78,8 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         run: |
           URL=$(netlify deploy \
-            --site "$NETLIFY_SITE_ID" \
             --auth "$NETLIFY_AUTH_TOKEN" \
+            --site "$NETLIFY_SITE_ID" \
             --dir "$(node -p "require('./netlify.json').publish || 'dist'")" \
             --message "Preview from PR #${{ github.event.pull_request.number }} @ ${{ github.sha }}" \
             --json | jq -r '.deploy_url')
@@ -75,6 +99,7 @@ jobs:
               body
             });
 
+      # ---- Production deploy on main ----
       - name: Deploy (Production on main)
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         env:
@@ -82,8 +107,8 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         run: |
           netlify deploy \
-            --site "$NETLIFY_SITE_ID" \
             --auth "$NETLIFY_AUTH_TOKEN" \
+            --site "$NETLIFY_SITE_ID" \
             --dir "$(node -p "require('./netlify.json').publish || 'dist'")" \
             --message "Production deploy @ ${{ github.sha }}" \
             --prod
