--- a/.github/workflows/netlify-cicd.yml
+++ b/.github/workflows/netlify-cicd.yml
@@ -70,11 +70,20 @@ jobs:
           [ -n "${{ secrets.NETLIFY_SITE_ID }}" ] || (echo "❌ NETLIFY_SITE_ID is empty" && exit 1)
           [ -d "$BUILD_DIR" ] || (echo "❌ Build dir '$BUILD_DIR' not found" && ls -la && exit 1)
 
-      - name: Netlify status (token can access site)
+      # Link the site non-interactively so CLI knows which site this repo targets
+      - name: Link Netlify site (non-interactive)
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: |
+          mkdir -p .netlify
+          echo "{\"siteId\":\"$NETLIFY_SITE_ID\"}" > .netlify/state.json
+          cat .netlify/state.json
+
+      # Verify auth + link (note: no --site flag here)
+      - name: Netlify status (verify auth & link)
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        run: netlify status --auth "$NETLIFY_AUTH_TOKEN" --site "$NETLIFY_SITE_ID"
+        run: netlify status --auth "$NETLIFY_AUTH_TOKEN"
 
       # ---- Preview deploy on PRs ----
       - name: Deploy (Preview for PRs)
